# Jubulant-Lamp

./: AUTHORS  README.md  compile_and_run.sh  meson.build  requirements.txt
Assets/: Sprite-0001.ase  forest.ase  rigged_human.mtl
include/: cube.hpp  gui.h  includes.hpp  mesh.hpp  plane.hpp  shader.h  shader.hpp  window.h
include/imgui/: imgui.d  imgui_demo.d  imgui_draw.d  imgui_impl_glfw.cpp  imgui_impl_glfw.d  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.d  imgui_tables.d  imgui_widgets.d
src/: Camera.h  Common.h  Core.h  Game.hpp  Makefile  Map.hpp  Player.hpp  Sprite.h  a.out  build_hash.txt  core.hh  game  imgui.ini  main.cc  main.cpp  main.py  map_generator.c
src/shaders/: grass_shader.frag  night_fragment.glsl  night_vertex.glsl
src_bk/: Makefile  main.py  main_with_clipping_mechanism.py
src_sdl/: Makefile  core.hh  main.cc
src_sdl/imgui/: imgui.ini
subprojects/: assimp.wrap
test/: a.out  main.c
